--- a/index.htm
+++ b/index.htm
@@ -80,7 +80,7 @@
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs1" aria-expanded="false" aria-controls="abs1">Abstract</a> | 
 					<a href="./docs/RD_paper_website.pdf" target=_blank>Paper</a> 
 				</p>
-				<div class="collapse abs-padding" id="abs1">We find that individuals involved in low-level crime who receive prison sentences are more likely to be re-imprisoned for technical violations during their post-release supervision, rather than for new offenses, compared to those who receive non-prison sentences. We identify the extent and cost of this incapacitation effect among individuals with similar criminal histories using exogenous variation in sentence type from discontinuities in Michigan Sentencing Guidelines. Higher re-imprisonment adds 15\% more prison days to the original sentence while only low-level crimes appear to be averted. These results suggest that re-imprisonment for technical parole violations does not prevent serious crime.</div>
+				<div class="collapse abs-padding" id="abs1">We find that individuals involved in low-level crime who receive prison sentences are more likely to be re-imprisoned for technical violations during their post-release supervision, rather than for new offenses, compared to those who receive non-prison sentences. We identify the extent and cost of this incapacitation effect among individuals with similar criminal histories using exogenous variation in sentence type from discontinuities in Michigan Sentencing Guidelines. Higher re-imprisonment adds 15% more prison days to the original sentence while only low-level crimes appear to be averted. These results suggest that re-imprisonment for technical parole violations does not prevent serious crime.</div>
 			<div>
 				<p><b>Behavioral Dynamics in Transitions from College to the Workforce</b>
 				<br>(with Meera Mahadevan)
@@ -88,8 +88,26 @@
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs2" aria-expanded="false" aria-controls="abs2">Abstract</a> | 
 					<a href="./docs/Franco_Mahadevan_website.pdf" target=_blank>Paper</a> 
 				</p>
-				<div class="collapse abs-padding" id="abs2">This paper examines how decision-making may change when individuals face a permanent change in financial resources after a major life transition. We experimentally elicit preference and cognitive measures from Colombian students on the job market, as well as from a comparison group of college peers in lower years, over 8 months. This period encompasses the job search process while students are in college and ends after they graduate and begin their full-time jobs. Using a difference-in-differences setup, we find that students entering the job market perceive greater financial liquidity and take on more responsibilities. We do not find any evidence of an increase in the take-up of credit or of students moving out of their parents' homes, features commonly associated with this transition in other countries. Regarding preferences, we find suggestive evidence that the students become less present biased and more prosocial during this transition to the workforce. We do not find significant changes in risk and ambiguity preferences or cognitive performance. These findings help us document the changes experienced during a universal transition, one that is achieved through own effort rather than cash transfers or government policies</div>
+				<div class="collapse abs-padding" id="abs2">This paper examines how decision-making may change when individuals face a permanent change in financial resources after a major life transition. We experimentally elicit preference and cognitive measures from Colombian students on the job market, as well as from a comparison group of college peers in lower years, over 8 months. This period encompasses the job search process while students are in college and ends after they graduate and begin their full-time jobs. Using a difference-in-differences setup, we find that students entering the job market perceive greater financial liquidity and take on more responsibilities. We do not find any evidence of an increase in the take-up of credit or of students moving out of their parents' homes, features commonly associated with this transition in other countries. Regarding preferences, we find suggestive evidence that the students become less present biased and more prosocial during this transition to the workforce. We do not find significant changes in risk and ambiguity preferences or cognitive performance. These findings help us document the changes experienced during a universal transition, one that is achieved through own effort rather than cash transfers or government policies.</div>
 
+				<div>
+				<p><b>Latin American immigration in the United States: Is there wage assimilation across the wage distribution?</b>
+				<br><i>Hispanics in the US Labor Market, Richard R. Verdugo ed.</i>, Centre for Demographic Studies, Barcelona, Spain, 2013.</p>
+				<p><a class="" role="button" data-bs-toggle="collapse" href="#absold1" aria-expanded="false" aria-controls="absold1">Abstract</a> | 
+					<a href="./docs/LA_immigrants.pdf" target=_blank>Paper</a> 
+				</p>
+				<div class="collapse abs-padding" id="absold1">This paper estimates wage differentials between Latin American immigrant males and U.S. natives along the wage distribution using quantile regression and matching methodologies. The hypothesis of wage assimilation is tested by exploiting the differences by cohort of arrival. The main findings indicate that Latin Americans’ wages do not assimilate to those of their native counterparts and that the gaps are wider for the lowest deciles of the distribution. For the cohorts of immigrants who arrived before 1979 the differential is explained almost completely by education, with a negligible effect that cannot be explained by observable characteristics.</div>
+			<div>
+				<p><b>Earnings differentials in Colombia: A study of young and rural workers, 2002-2009</b>
+				<br>(with Johanna Ramos)
+				<br><i>Economic Analysis Review</i>, Vol. 25, No.2, Special Issue: Inequality and income mobility in Latin America, 2010.</p>
+				<p><a class="" role="button" data-bs-toggle="collapse" href="#absold2" aria-expanded="false" aria-controls="absold2">Abstract</a> | 
+					<a href="./docs/Earnings_differentials.pdf" target=_blank>Paper</a> 
+				</p>
+				<div class="collapse abs-padding" id="absold2">This paper examines the trends and magnitude of earnings differentials among urban and rural workers, and young (18-24 years) and old (25-65 years) workers from 2002 to 2009 in Colombia. Using household surveys data and constructing cells for comparing only workers with the same characteristics, the results from time series and matching decomposition methodologies show that earnings in the groups of interest have not diverged over time. However, the earnings differentials are high at around –50 percent for rural and –40 percent for young workers, of which 14 and 19 percentage points, respectively, remain unexplained after controlling for demographic and job-related characteristics.</div>
+
+
+				
 			<h4>Working papers</h4>
 			<div>
 				<p><b>Will Artificial Intelligence get in the way of achieving gender equality?</b>
