--- a/index.htm
+++ b/index.htm
@@ -125,12 +125,12 @@
 			<div class="collapse abs-padding" id="abs4">We exploit randomness in college entrance exams in Colombia to study how the placement of answers impacts multiple choice test results and access to college. Using administrative data, we find that: first, applicants are 5% less likely to answer correctly when the correct answer is the last in the choice set (option D). And, second, that one SD higher share of correct answers in D in the math section reduces applicants’ overall performance and their preferred major admission rate by 3%. Considering lifelong college access implications, we show how seemingly innocuous exam features disproportionately affect unlucky test takers. <br/></div>
 
 			<div>
-				<p><b>Bridging the Gender Gap in Exam Performance through Nudges and Stress Management</b>
+				<p><b>Bridging the Gender Gap in Exam Performance through Nudges and Stress Reframing</b>
 				<br><i>(with Marcela Gomez-Ruiz)</i></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs5" aria-expanded="false" aria-controls="abs5">Abstract</a> | 
-					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
+					<a href="./docs/Nudge_stress_website.pdf" target=_blank>Paper</a> 
 				</p>
-			<div class="collapse abs-padding" id="abs5">Why women underperform relative to men in high-stakes exams while excelling under lower stakes remains puzzling. Previous research suggests differential responses to pressure and omitted questions as explanations. We evaluate a unique randomized trial with 4,658 applicants to a coding program in Uruguay, introducing two treatments: a <i>Nudge</i> to answer all questions and a <i>Nudge + Stress</i> intervention, reframing stress as performance-enhancing. Treated women omit fewer questions, boosting performance by 0.08 SD and 0.18 SD, respectively. There are no effects on men, and 9% more women gain admission. The key insight is that reducing omitted questions narrows gender performance gaps. <br/></div>
+			<div class="collapse abs-padding" id="abs5">Why women underperform relative to men in high-stakes exams while excelling under lower stakes remains puzzling. Previous research suggests differential responses to pressure and omitted questions as explanations. We evaluate a unique randomized trial with 4,658 applicants to a coding program in Uruguay, introducing two treatments: a \emph{Nudge} to answer all questions and a \emph{Nudge + Stress} intervention, reframing stress as performance-enhancing. Treated women omit fewer questions, boosting performance by 0.08 SD and 0.18 SD, respectively. There are no effects on men, and 9\% more women gain admission. The key insight is that reducing omitted questions narrows gender performance gaps. <br/></div>
 	
 			<div>
 				<p><b>Strategic Decisions Have "Major" Consequences: Gender Differences in College Major Choices</b>
@@ -144,7 +144,7 @@
 				<p><b>Gender Differences at the Top: Incentives, Performance and Choking under Pressure</b>
 				<br><i>(with Ingvild Skarpeid)</i></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs7" aria-expanded="false" aria-controls="abs7">Abstract</a> | 
-					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
+					<a href="./docs/Choking_website.pdf" target=_blank>Paper</a> 
 				</p>
 			<div class="collapse abs-padding" id="abs7">Are women more likely than men to choke under pressure? We provide novel experimental evidence on this question from a large-scale study of online workers taking part in two IQ tests. We manipulate the level of pressure by varying the performance requirement or the size of the incentives. We complement the experimental analysis with survey evidence that help us confirm that the increase in incentives is substantial compared to the size of incentives typically offered to these online workers. Our results show that increasing pressure does not significantly affect overall performance, nor does it differentially impact women. However, an exploratory analysis reveals that high incentives reduce performance among female test takers who may be ``at risk'' of choking: women who performed close to the performance requirement in the first test and had correct beliefs about being a high performer. Our findings suggest that understanding how high-performing women respond to pressure may be a key step in closing the gender gap in domains with high levels of pressure such as high-stakes examinations. <br/></div>
 
@@ -160,7 +160,7 @@
 				<p><b>Willingness to Pay for Formal Job Attributes: A Discrete Choice Experiment in Colombian Mom-and-Dad Stores</b>
 				<br><i>(with Amalia Rodríguez-Valencia)</i></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs9" aria-expanded="false" aria-controls="abs9">Abstract</a> | 
-					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
+					<a href="./docs/WTP_website.pdf" target=_blank>Paper</a> 
 				</p>
 			<div class="collapse abs-padding" id="abs9">Informal workers are vulnerable to economic shocks since their jobs lack health and retirement benefits. Are workers informal because they do not value these benefits offered by formal jobs? Using a discrete choice experiment on a random sample of 2,900 "mom-and-dad" store owners and employees in Colombia, we estimate their willingness to pay (WTP) for formal employment benefits, namely health and retirement plans. We find that on average workers are willing to forego up to 28% and 37% of their earnings to access formal health and retirement benefits, respectively. In contrast to previous research, which suggests that workers’ low WTP induced them to become informal under expansions of free or subsidized health insurance programs, our findings suggest that workers value these benefits and point to inflexibilities in the labor market and the rules governing the health and retirement systems as more important hurdles for workers to become formal. <br/></div>
 
