--- a/index.htm
+++ b/index.htm
@@ -110,7 +110,7 @@
 				
 			<h4>Working papers</h4>
 			<div>
-				<p><b>Will Artificial Intelligence get in the way of achieving gender equality?</b>
+				<p><b>Will Artificial Intelligence Get in the Way of Achieving Gender Equality?</b>
 				<br><i>(with Daniel Carvajal and Siri Isaksson)</i></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs3" aria-expanded="false" aria-controls="abs3">Abstract</a> | 
 					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4759218" target=_blank>Paper</a> 
