--- a/index.htm
+++ b/index.htm
@@ -67,7 +67,7 @@
 
 			<p> My research focuses on education challenges in industrialized and developing countries, often using behavioral economics as an approach. I use both administrative data and design my own randomized studies. Currently, my focus is on studying the implications of generative AI on education, as well as the role of stress on gender differences in high-stakes exam performance. </p>
 			<p><b>Email:</b> catalina.franco@snf.no</p>
-			<p> You can find my <b>CV</b> <a href="./docs/CV_CFranco.pdf" target=_blank>here</a> (Updated October 2024)</p>
+			<p> You can find my <b>CV</b> <a href="./docs/CV_CFranco.pdf" target=_blank>here</a> </p>
 		</div>
 		<br/>
 		<div>
