--- a/index.htm
+++ b/index.htm
@@ -117,6 +117,13 @@
 				</p>
 				<div class="collapse abs-padding" id="abs3">We conduct two surveys with preregistered experiments to examine gender differences in generative AI adoption and potential labor market consequences. First, we document a substantial gender gap in AI adoption among students at a top business school in Norway, with female students, particularly top students, opting out of AI use. Second, a survey of managers shows that acquiring AI skills would significantly enhance job prospects for top female students currently avoiding AI. Finally, we provide causal evidence on policy tools to close the gender gap in AI adoption. Our findings show that generative AI could widen existing gender gaps in the labor market, but appropriate policies can help prevent this outcome.</div>
 			<div>
+				<p><b>Does AI Help or Hurt Learning?</b>
+				<br><i>(with Natalie Irmert and Siri Isaksson)</i></p>
+				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs3" aria-expanded="false" aria-controls="abs3">Abstract</a> | 
+					<a>Paper available upon request</a> 
+				</p>
+				<div class="collapse abs-padding" id="abs3">As AI reshapes how students learn, it raises pressing concerns about ensuring equitable learning opportunities and outcomes. A key question is who benefits from AI and who may be left behind. We address this question through a preregistered lab experiment (N=572) examining AI’s impact on learning. Students were randomly assigned to one of three conditions: (1) Control (access to Google Search only), (2) AI-assisted (AI access), or (3) AI-guided (AI access with guidance), and were tasked with learning a novel topic that they had no prior knowledge of. At the end of the experiment, participants completed an exam without AI access, allowing us to causally estimate the effects of AI on learning outcomes. While AI has no overall effect on exam performance, this null masks a significant heterogeneous effect: high-GPA women benefit, while low-GPA men perform worse, raising concerns about whether AI will widen pre-existing educational inequalities. By analyzing participants’ prompt data, we gain insight into the mechanisms behind these effects and identify how different groups interact with AI and how this in turn affects learning outcomes. Our findings reveal that AI may exacerbate learning gaps, and provides key insights for designing policies that can mitigate this risk.</div>
+			<div>
 				<p><b>Innocuous Exam Features? The Impact of Answer Placement on High-Stakes Test Performance and College Admissions</b>
 				<br><i>(with Erika Povea)</i></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs4" aria-expanded="false" aria-controls="abs4">Abstract</a> | 
@@ -185,10 +192,6 @@
 			<h4>Work in progress</h4>
 			<div>
 
-			<p><b>The Effects of Generative AI on Learning</b>
-				<br><i>(with Natalie Irmert and Siri Isaksson)</i></p>
-
-				<div>
 			<p><b>Gender Differences in Recognition of Depression and Seeking Help</b>
 				<br><i>(with Sara Abrahamsson and Akshay Moorthy)</i></p>
 
