--- a/index.htm
+++ b/index.htm
@@ -117,7 +117,7 @@
 				</p>
 				<div class="collapse abs-padding" id="abs3">We conduct two surveys with preregistered experiments to examine gender differences in generative AI adoption and potential labor market consequences. First, we document a substantial gender gap in AI adoption among students at a top business school in Norway, with female students, particularly top students, opting out of AI use. Second, a survey of managers shows that acquiring AI skills would significantly enhance job prospects for top female students currently avoiding AI. Finally, we provide causal evidence on policy tools to close the gender gap in AI adoption. Our findings show that generative AI could widen existing gender gaps in the labor market, but appropriate policies can help prevent this outcome.</div>
 			<div>
-				<p><b>Does AI Help or Hurt Learning?</b>
+				<p><b>Does AI Help or Hurt Student Learning?</b>
 				<br><i>(with Natalie Irmert and Siri Isaksson)</i></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs3" aria-expanded="false" aria-controls="abs3">Abstract</a> | 
 					<a>Paper available upon request</a> 
@@ -129,7 +129,7 @@
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs4" aria-expanded="false" aria-controls="abs4">Abstract</a> | 
 					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4796093" target=_blank>Paper</a> 
 				</p>
-			<div class="collapse abs-padding" id="abs4">We exploit randomness in college entrance exams in Colombia to study how the placement of answers impacts multiple choice test results and access to college. Using administrative data, we find that: first, applicants are 5% less likely to answer correctly when the correct answer is the last in the choice set (option D). And, second, that one SD higher share of correct answers in D in the math section reduces applicants’ overall performance and their preferred major admission rate by 3%. Considering lifelong college access implications, we show how seemingly innocuous exam features disproportionately affect unlucky test takers. <br/></div>
+			<div class="collapse abs-padding" id="abs4">We exploit randomness in college entrance exams in Colombia to study how the placement of answers impacts multiple choice test results and access to college. Using administrative data, we find that: first, applicants are 5\% less likely to answer correctly when the correct answer is the last in the choice set (option D). This is due to test takers overlooking options at the bottom of the list. Second, a one SD higher share of correct answers in D in the math section reduces applicants’ overall performance and their preferred major admission rate by 3\%. This seemingly innocuous exam feature disproportionately affects unlucky test takers by pushing those on the margin away from a selective university into vocational programs. <br/></div>
 
 			<div>
 				<p><b>Bridging the Gender Gap in Exam Performance through Nudges and Stress Reframing</b>
