--- a/index.htm
+++ b/index.htm
@@ -124,6 +124,13 @@
 				</p>
 				<div class="collapse abs-padding" id="abs3">As AI reshapes how students learn, it raises pressing concerns about ensuring equitable learning opportunities and outcomes. A key question is who benefits from AI and who may be left behind. We address this question through a preregistered lab experiment (N=572) examining AI’s impact on learning. Students were randomly assigned to one of three conditions: (1) Control (access to Google Search only), (2) AI-assisted (AI access), or (3) AI-guided (AI access with guidance), and were tasked with learning a novel topic that they had no prior knowledge of. At the end of the experiment, participants completed an exam without AI access, allowing us to causally estimate the effects of AI on learning outcomes. While AI has no overall effect on exam performance, this null masks a significant heterogeneous effect: high-GPA women benefit, while low-GPA men perform worse, raising concerns about whether AI will widen pre-existing educational inequalities. By analyzing participants’ prompt data, we gain insight into the mechanisms behind these effects and identify how different groups interact with AI and how this in turn affects learning outcomes. Our findings reveal that AI may exacerbate learning gaps, and provides key insights for designing policies that can mitigate this risk.</div>
 			<div>
+				<p><b>Gender Differences in Recognizing Depression and Seeking Help</b>
+				<br><i>(with Sara Abrahamsson and Akshay Moorthy)</i></p>
+				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs3" aria-expanded="false" aria-controls="abs3">Abstract</a> | 
+					<a href="./docs/Gender_MH_website.pdf" target=_blank>Paper</a> 
+				</p>
+				<div class="collapse abs-padding" id="abs3"> Substantial gender disparities in depression rates are observed worldwide, with women more frequently diagnosed than men. This study examines two potential behavioral drivers of these gaps:  recognition of symptoms and willingness to seek help. To circumvent challenges that may lead to underrecognition and underreporting in real-life cases, we use hypothetically generated depression scenarios in a pre-registered experiment with a representative U.S. sample. Our main finding is that men face a “double whammy” in mental health: they are less likely than women to recognize depression, especially at milder severity levels, and less likely to seek help when evaluating scenarios about themselves, despite believing others should seek help in similar situations. Among our three pre-specified mechanisms—perceptions, psychic costs, and social norms—psychic costs play a key role in men's help-seeking behavior.</div>
+			<div>
 				<p><b>Exam Luck and Human Capital Accumulation</b>
 				<br><i>(with Erika Povea)</i></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs4" aria-expanded="false" aria-controls="abs4">Abstract</a> | 
@@ -143,7 +150,7 @@
 				<p><b>Strategic Decisions Have "Major" Consequences: Gender Differences in College Major Choices</b>
 				<br><i>(with Amelia Hawkins)</i></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs6" aria-expanded="false" aria-controls="abs6">Abstract</a> | 
-					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
+					<a href="https://drive.google.com/file/d/1b3ceOTqYmBsM8zCEkCvUwzUnTmbjEMHh/view?usp=drive_link" target=_blank>Paper</a> 
 				</p>
 			<div class="collapse abs-padding" id="abs6">Does the way students navigate college admissions processes contribute to gender gaps in major choices? We study the major choices of applicants to Colombia's largest public university who marginally miss their intended major’s cutoff. We find that women scoring just below the cutoff submit additional, less-preferred majors compared to similar men intending the same major. While women enroll sooner into these less-preferred majors, men instead reapply later for admission. As a result, a gender gap in potential earnings of 4.5% emerges at the cutoff. Our findings highlight that differential responses to just failing can influence enrolled majors and earnings potential. <br/></div>
 
@@ -174,16 +181,16 @@
 							<div>
 				<p><b>How does Relative Performance Feedback Affect Beliefs and Academic Decisions? Evidence from a Field Experiment</b></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs10" aria-expanded="false" aria-controls="abs10">Abstract</a> | 
-					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
+					<a href="https://economia.uniandes.edu.co/sites/default/files/seminariocede/Franco-Catalina-JMP.pdf" target=_blank>Paper</a> 
 				</p>
 			<div class="collapse abs-padding" id="abs10">Previous literature documents gender differences in high-stakes exam performance. It has been suggested that these differences may be partly due to women "choking" under pressure. However, no causal evidence conclusively shows that choking under pressure causes underperformance in high-stakes settings, or that women are more affected than men. To address this gap, we designed an experiment to test whether women face a gender-specific penalty when performing under pressure. Over 2,600 online participants completed two IQ tests. In the first, stakes were constant across all groups. In the second test, we varied pressure levels by introducing a performance cutoff and, in one treatment group, significantly increasing the stakes. We also conducted a survey providing novel and detailed information on typical earnings on the Prolific platform, confirming that the increase in incentives was substantial compared to standard rewards for these online workers. Our results show that increasing pressure does not significantly affect overall performance, nor does it differentially impact women. However, an exploratory analysis reveals that the large incentives reduce performance among female test takers who may be ``at risk" of choking: women who performed well in the first test and accurately believed so. Our findings suggest that understanding how high-performing women respond to pressure may be a key step in closing the gender gap in examinations. <br/></div>
 
 			<div>
 				<p><b>The Value of a Signal: Information Processing among Students Outside the Lab </b></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs11" aria-expanded="false" aria-controls="abs11">Abstract</a> | 
-					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4916008" target=_blank>Paper</a> 
+					<a href="https://drive.google.com/file/d/1HR9SGnPVUwQVSq5hLtldRqA9O-2QFJ4L/view?usp=drive_link" target=_blank>Paper</a> 
 				</p>
-			<div class="collapse abs-padding" id="abs11">This paper examines the hypothesized relationship between performance and stress, commonly known as the Yerkes-Dodson Law (YDL). Analyzing exam performance and post-exam survey responses from 35,000 university applicants taking a high-stakes college entrance exam in Colombia, we find empirical support for the inverted-U pattern posited by the YDL. Our results indicate that female applicants are significantly more likely to experience high, sub-optimal levels of stress compared to male applicants. We estimate that high-stress levels result in a performance penalty of 5\% of a standard deviation. Additionally, our results suggest that, in high-stakes settings, interventions aimed at reducing the importance students place on the outcome of the exam may be more effective for optimizing stress than alternatives like stress reappraisal or controlling worry. <br/></div>
+			<div class="collapse abs-padding" id="abs11">Correctly processing informational signals and assessing relative performance are key for decision-making in education. While laboratory studies have found that individuals process information in biased ways, little is known about how students update beliefs in real-life education settings. Leveraging elicitation methods from lab studies, this paper provides the first evidence of information processing in a high-stakes, real-life education situation: students preparing for a college entrance exam. I study belief updating in response to information and assess the value of a relative performance signal vis-`a-vis absolute scores, the mainstream form of information in education. I provide three main findings. First, students are conservative and update about 70% of what an unbiased Bayesian would. Second, the relative performance signal is more valuable for students whose absolute score is in the middle of the distribution, where it is harder to assess whether one’s score is above or below the median. Third, larger belief updates induced by receiving the signal foster higher confidence in gaining university admission, in particular for female students, suggesting that belief updating can help build noncognitive skills that are invaluable for student success. <br/></div>
 
 				
 
@@ -192,20 +199,16 @@
 			<h4>Work in progress</h4>
 			<div>
 
-			<p><b>Gender Differences in Recognition of Depression and Seeking Help</b>
-				<br><i>(with Sara Abrahamsson and Akshay Moorthy)</i></p>
-
-				<div>
 			<p><b>Encouraging Women Leadership: Evidence from Village Savings and Loans Associations in Uganda</b>
 				<br><i>(with Kjetil Bjorvatn, Shyamal Chowdhury, Danila Serra and Munshi Sulaiman)</i></p>
 
-				<div>
-			<p><b>Mentors for Minority Language Students</b>
-				<br><i>(with Astrid Ervik, Julian Johnsen and Kjell Salvanes)</i></p>
+								<div>
+			<p><b>Gender Composition of the Classroom and Performance in High-Stakes Exams</b>
+				<br><i>(with Marcela Gómez-Ruiz and Yushao Ye)</i></p>
 			</div>
-					
+			
 				<div>
-			<p><b>Getting Employers to Hire Workers in Inclusion Policies through Nudges and Motivation</b>
+			<p><b>Frictions and Misperceptions in Firm Take-up of Active Labor Market Programs</b>
 				<br><i>(with Kjetil Bjorvatn, Mathias Ekström and Ranveig Falch)</i></p>
 			</div>
 		</div>
