--- a/index.htm
+++ b/index.htm
@@ -129,7 +129,7 @@
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs5" aria-expanded="false" aria-controls="abs5">Abstract</a> | 
 					<a href="./docs/Gender_MH_website.pdf" target=_blank>Paper</a> 
 				</p>
-				<div class="collapse abs-padding" id="abs5"> Substantial gender disparities in depression rates are observed worldwide, with women more frequently diagnosed than men. This study examines two potential behavioral drivers of these gaps:  recognition of symptoms and willingness to seek help. To circumvent challenges that may lead to underrecognition and underreporting in real-life cases, we use hypothetically generated depression scenarios in a pre-registered experiment with a representative U.S. sample. Our main finding is that men face a “double whammy” in mental health: they are less likely than women to recognize depression, especially at milder severity levels, and less likely to seek help when evaluating scenarios about themselves, despite believing others should seek help in similar situations. Among our three pre-specified mechanisms—perceptions, psychic costs, and social norms—psychic costs play a key role in men's help-seeking behavior.</div>
+				<div class="collapse abs-padding" id="abs5"> Worldwide, depression is more often diagnosed in women than in men. We examine two potential behavioral drivers of this gap: symptom recognition and willingness to seek help. We use hypothetical depression scenarios in a pre-registered experiment to bypass underrecognition and underreporting in real-life cases. We find that men face a “double whammy” in mental health: they are less likely than women to recognize depression, especially at milder severity levels, and less willing to seek help when evaluating scenarios about themselves, despite believing others in similar situations should. Among three pre-specified mechanisms, psychic costs are key in men's help-seeking behavior.</div>
 			<div>
 				<p><b>Exam Luck and Human Capital Accumulation</b>
 				<br><i>(with Erika Povea)</i></p>
@@ -243,3 +243,4 @@
   </body>
 
 </html>
+
