--- a/index.htm
+++ b/index.htm
@@ -131,12 +131,12 @@
 				</p>
 				<div class="collapse abs-padding" id="abs5"> Worldwide, depression is more often diagnosed in women than in men. We examine two potential behavioral drivers of this gap: symptom recognition and willingness to seek help. We use hypothetical depression scenarios in a pre-registered experiment to bypass underrecognition and underreporting in real-life cases. We find that men face a “double whammy” in mental health: they are less likely than women to recognize depression, especially at milder severity levels, and less willing to seek help when evaluating scenarios about themselves, despite believing others in similar situations should. Among three pre-specified mechanisms, psychic costs are key in men's help-seeking behavior.</div>
 			<div>
-				<p><b>Exam Luck and Human Capital Accumulation</b>
+				<p><b>Exam Luck and Human Capital Accumulation</b> (Reject & Resubmit, JPE Micro)
 				<br><i>(with Erika Povea)</i></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs6" aria-expanded="false" aria-controls="abs6">Abstract</a> | 
 					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4796093" target=_blank>Paper</a> 
 				</p>
-			<div class="collapse abs-padding" id="abs6">We exploit randomness in college entrance exams in Colombia to study how the placement of answers impacts multiple choice test results and access to college. Using administrative data, we find that: first, applicants are 5\% less likely to answer correctly when the correct answer is the last in the choice set (option D). This is due to test takers overlooking options at the bottom of the list. Second, a one SD higher share of correct answers in D in the math section reduces applicants’ overall performance and their preferred major admission rate by 3\%. This seemingly innocuous exam feature disproportionately affects unlucky test takers by pushing those on the margin away from a selective university into vocational programs. <br/></div>
+			<div class="collapse abs-padding" id="abs6">We show that subtle standardized test design features shape long-term educational trajectories. Exploiting random variation in correct answer placement in a Colombian college entrance exam, we find that students are 5% less likely to answer correctly when the correct option appears last. This seemingly minor pattern is economically consequential: “unlucky” booklets with more Ds in math lower overall scores by 0.011 SD and first-choice admissions by 3%, diverting marginal students from a selective public university into lower-return vocational programs. The mechanism is consistent with students overlooking options at the bottom of the list when scanning answers sequentially under time pressure. <br/></div>
 
 			<div>
 				<p><b>Bridging the Gender Gap in Exam Performance through Nudges and Stress Reframing</b>
@@ -144,13 +144,13 @@
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs7" aria-expanded="false" aria-controls="abs7">Abstract</a> | 
 					<a href="./docs/Nudge_stress_website.pdf" target=_blank>Paper</a> 
 				</p>
-			<div class="collapse abs-padding" id="abs7">Why women underperform relative to men in high-stakes exams while excelling under lower stakes remains puzzling. Previous research suggests differential responses to pressure and omitted questions as explanations. We evaluate a unique randomized trial with 4,658 applicants to a coding program in Uruguay, introducing two treatments: a \emph{Nudge} to answer all questions and a \emph{Nudge + Stress} intervention, reframing stress as performance-enhancing. Treated women omit fewer questions, boosting performance by 0.08 SD and 0.18 SD, respectively. There are no effects on men, and 9\% more women gain admission. The key insight is that reducing omitted questions narrows gender performance gaps. <br/></div>
+			<div class="collapse abs-padding" id="abs7">High-stakes exams are gateways to selective educational programs and high-return careers, yet women often underperform relative to men despite having higher GPAs. We study the role of differential responses to exam pressure using a randomized trial with 4,658 applicants to a national coding program in Uruguay. A brief prompt reframing stress as performance-enhancing reduces unanswered questions among women by one third and increases their scores by 0.18 SD. We find no effects for men, and 9% more women gain admission. The key insight is that low-cost in-exam prompts can mitigate gender performance gaps and improve talent selection efficiency. <br/></div>
 	
 			<div>
 				<p><b>Strategic Decisions Have "Major" Consequences: Gender Differences in College Major Choices</b>
 				<br><i>(with Amelia Hawkins)</i></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs8" aria-expanded="false" aria-controls="abs8">Abstract</a> | 
-					<a href="https://drive.google.com/file/d/1b3ceOTqYmBsM8zCEkCvUwzUnTmbjEMHh/view?usp=drive_link" target=_blank>Paper</a> 
+					<a href="./docs/Major_choices_website.pdf" target=_blank>Paper</a> 
 				</p>
 			<div class="collapse abs-padding" id="abs8">Does the way students navigate college admissions processes contribute to gender gaps in major choices? We study the major choices of applicants to Colombia's largest public university who marginally miss their intended major’s cutoff. We find that women scoring just below the cutoff submit additional, less-preferred majors compared to similar men intending the same major. While women enroll sooner into these less-preferred majors, men instead reapply later for admission. As a result, a gender gap in potential earnings of 4.5% emerges at the cutoff. Our findings highlight that differential responses to just failing can influence enrolled majors and earnings potential. <br/></div>
 
@@ -243,4 +243,5 @@
   </body>
 
 </html>
+
 
