--- a/index.htm
+++ b/index.htm
@@ -131,7 +131,7 @@
 				</p>
 				<div class="collapse abs-padding" id="abs5"> Worldwide, depression is more often diagnosed in women than in men. We examine two potential behavioral drivers of this gap: symptom recognition and willingness to seek help. We use hypothetical depression scenarios in a pre-registered experiment to bypass underrecognition and underreporting in real-life cases. We find that men face a “double whammy” in mental health: they are less likely than women to recognize depression, especially at milder severity levels, and less willing to seek help when evaluating scenarios about themselves, despite believing others in similar situations should. Among three pre-specified mechanisms, psychic costs are key in men's help-seeking behavior.</div>
 			<div>
-				<p><b>Exam Luck and Human Capital Accumulation</b> (Reject & Resubmit, JPE Micro)
+				<p><b>Exam Luck and Human Capital Accumulation</b><i>(Reject & Resubmit, JPE Micro)</i> 
 				<br><i>(with Erika Povea)</i></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs6" aria-expanded="false" aria-controls="abs6">Abstract</a> | 
 					<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4796093" target=_blank>Paper</a> 
@@ -243,5 +243,6 @@
   </body>
 
 </html>
+
 
 
