--- a/index.htm
+++ b/index.htm
@@ -188,7 +188,7 @@
 			<div>
 				<p><b>The Value of a Signal: Information Processing among Students Outside the Lab </b></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs13" aria-expanded="false" aria-controls="abs13">Abstract</a> | 
-					<a href="https://drive.google.com/file/d/1HR9SGnPVUwQVSq5hLtldRqA9O-2QFJ4L/view?usp=drive_link" target=_blank>Paper</a> 
+					<a href="./docs/Value_of_a_signal_website.pdf" target=_blank>Paper</a> 
 				</p>
 			<div class="collapse abs-padding" id="abs13">Correctly processing informational signals and assessing relative performance are key for decision-making in education. While laboratory studies have found that individuals process information in biased ways, little is known about how students update beliefs in real-life education settings. Leveraging elicitation methods from lab studies, this paper provides the first evidence of information processing in a high-stakes, real-life education situation: students preparing for a college entrance exam. I study belief updating in response to information and assess the value of a relative performance signal vis-`a-vis absolute scores, the mainstream form of information in education. I provide three main findings. First, students are conservative and update about 70% of what an unbiased Bayesian would. Second, the relative performance signal is more valuable for students whose absolute score is in the middle of the distribution, where it is harder to assess whether one’s score is above or below the median. Third, larger belief updates induced by receiving the signal foster higher confidence in gaining university admission, in particular for female students, suggesting that belief updating can help build noncognitive skills that are invaluable for student success. <br/></div>
 
@@ -243,6 +243,7 @@
   </body>
 
 </html>
+
 
 
 
