--- a/index.htm
+++ b/index.htm
@@ -86,7 +86,7 @@
 				<br>(with Meera Mahadevan)
 				<br><i>Journal of Economic Behavior and Organization</i>, August 2021</p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs2" aria-expanded="false" aria-controls="abs2">Abstract</a> | 
-					<a href="./docs/Franco_Mahadevan_website.pdf" target=_blank>Paper</a> 
+					<a href="./docs/Franco_Mahadevan_website.pdf" target=_blank>Paper</a> | <a href="https://www.sciencedirect.com/science/article/pii/S0167268121002110" target=_blank>Published version</a>
 				</p>
 				<div class="collapse abs-padding" id="abs2">This paper examines how decision-making may change when individuals face a permanent change in financial resources after a major life transition. We experimentally elicit preference and cognitive measures from Colombian students on the job market, as well as from a comparison group of college peers in lower years, over 8 months. This period encompasses the job search process while students are in college and ends after they graduate and begin their full-time jobs. Using a difference-in-differences setup, we find that students entering the job market perceive greater financial liquidity and take on more responsibilities. We do not find any evidence of an increase in the take-up of credit or of students moving out of their parents' homes, features commonly associated with this transition in other countries. Regarding preferences, we find suggestive evidence that the students become less present biased and more prosocial during this transition to the workforce. We do not find significant changes in risk and ambiguity preferences or cognitive performance. These findings help us document the changes experienced during a universal transition, one that is achieved through own effort rather than cash transfers or government policies.</div>
 
@@ -124,12 +124,12 @@
 				</p>
 				<div class="collapse abs-padding" id="abs4">As AI reshapes how students learn, it raises pressing concerns about ensuring equitable learning opportunities and outcomes. A key question is who benefits from AI and who may be left behind. We address this question through a preregistered lab experiment (N=572) examining AI’s impact on learning. Students were randomly assigned to one of three conditions: (1) Control (access to Google Search only), (2) AI-assisted (AI access), or (3) AI-guided (AI access with guidance), and were tasked with learning a novel topic that they had no prior knowledge of. At the end of the experiment, participants completed an exam without AI access, allowing us to causally estimate the effects of AI on learning outcomes. While AI has no overall effect on exam performance, this null masks a significant heterogeneous effect: high-GPA women benefit, while low-GPA men perform worse, raising concerns about whether AI will widen pre-existing educational inequalities. By analyzing participants’ prompt data, we gain insight into the mechanisms behind these effects and identify how different groups interact with AI and how this in turn affects learning outcomes. Our findings reveal that AI may exacerbate learning gaps, and provides key insights for designing policies that can mitigate this risk.</div>
 			<div>
-				<p><b>Gender Differences in Recognizing Depression and Seeking Help</b>
+				<p><b>Recognition Thresholds and the Gender Gap in Depression</b>
 				<br><i>(with Sara Abrahamsson and Akshay Moorthy)</i></p>
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs5" aria-expanded="false" aria-controls="abs5">Abstract</a> | 
 					<a href="./docs/Gender_MH_website.pdf" target=_blank>Paper</a> 
 				</p>
-				<div class="collapse abs-padding" id="abs5"> Worldwide, depression is more often diagnosed in women than in men. We examine two potential behavioral drivers of this gap: symptom recognition and willingness to seek help. We use hypothetical depression scenarios in a pre-registered experiment to bypass underrecognition and underreporting in real-life cases. We find that men face a “double whammy” in mental health: they are less likely than women to recognize depression, especially at milder severity levels, and less willing to seek help when evaluating scenarios about themselves, despite believing others in similar situations should. Among three pre-specified mechanisms, psychic costs are key in men's help-seeking behavior.</div>
+				<div class="collapse abs-padding" id="abs5"> Worldwide, depression is more common among women than men, but it is unclear whether this reflects differences in distress or in who is recorded as depressed. We find that the gap shrinks when symptoms are measured in representative surveys rather than epidemiological data, consistent with selection into measurement. We then conduct a pre-registered vignette experiment isolating how individuals interpret symptoms and decide whether to seek help. Men are less likely than women to recognize depression and to seek help. These results indicate a higher self-classification threshold for men, implying that measured prevalence partly reflects behavior rather than underlying mental health.</div>
 			<div>
 				<p><b>Exam Luck and Human Capital Accumulation </b><i>(Reject & Resubmit, JPE Micro)</i> 
 				<br><i>(with Erika Povea)</i></p>
@@ -243,6 +243,7 @@
   </body>
 
 </html>
+
 
 
 
