--- a/index.htm
+++ b/index.htm
@@ -129,7 +129,7 @@
 				<p><a class="" role="button" data-bs-toggle="collapse" href="#abs5" aria-expanded="false" aria-controls="abs5">Abstract</a> | 
 					<a href="./docs/Gender_MH_website.pdf" target=_blank>Paper</a> 
 				</p>
-				<div class="collapse abs-padding" id="abs5"> Worldwide, depression is more common among women than men, but it is unclear whether this reflects differences in distress or in who is recorded as depressed. We find that the gap shrinks when symptoms are measured in representative surveys rather than epidemiological data, consistent with selection into measurement. We then conduct a pre-registered vignette experiment isolating how individuals interpret symptoms and decide whether to seek help. Men are less likely than women to recognize depression and to seek help. These results indicate a higher self-classification threshold for men, implying that measured prevalence partly reflects behavior rather than underlying mental health.</div>
+				<div class="collapse abs-padding" id="abs5"> Worldwide, depression is more prevalent among women than men, but it is unclear whether this reflects differences in distress or in who is recorded as depressed. We find that the gap is smaller when depression is measured in representative surveys rather than epidemiological data, consistent with selection into measurement. We then conduct a pre-registered vignette experiment focusing on symptom interpretation and help-seeking. For equivalent symptoms, men are less likely than women to recognize depression and to seek help. The results indicate a higher self-classification threshold for men, implying that measured prevalence partly reflects behavior rather than underlying mental health. </div>
 			<div>
 				<p><b>Exam Luck and Human Capital Accumulation </b><i>(Reject & Resubmit, JPE Micro)</i> 
 				<br><i>(with Erika Povea)</i></p>
@@ -243,6 +243,7 @@
   </body>
 
 </html>
+
 
 
 
